--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blog of Vivien</title>
 </head>
 <body>
-    <p>Hello, this is Vivien's blog</p>
+    <p>Hello, this is blog of Vivien Yang</p>
     <p>一起加油鸭</p>
 </body>
 </html>
